# open-whisper

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  package.json  prd.md  setup.bat
.serena/: project.yml
backend/: pyproject.toml
backend/scripts/: e2e_mic_to_text.py  e2e_mic_to_text_streaming.py
backend/src/: __init__.py  config.py  debug_log.py  exceptions.py  main.py
backend/src/api/: _file_transcription_state.py  _helpers.py  routes.py  ws.py
backend/src/api/routes/: __init__.py  audio.py  config.py  health.py  llm.py  search.py  sessions.py  upload.py
backend/src/audio/: capture.py
backend/src/llm/: __init__.py  client.py
backend/src/search/: backfill.py  embedding.py  stopwords.json  vector_store.py
backend/src/storage/: database.py  repository.py
backend/src/transcription/: __init__.py  client.py  file_transcriber.py  whisper_client.py
backend/tests/: conftest.py  test_audio.py  test_config.py  test_refactoring.py  test_routes.py  test_search.py  test_storage.py  test_transcription.py
docs/: architecture.drawio  schema.dbml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BackendStatusBanner.tsx  DeleteSessionDialog.tsx  LanguageSelector.tsx  Layout.tsx  LogoMark.tsx  MicTest.tsx  ScenarioCards.tsx  ScenarioResult.tsx  SessionSearchBar.tsx  StatusIndicator.tsx  ThemeToggle.tsx  TranscriptionView.tsx
frontend/src/contexts/: TranscriptionContext.tsx
frontend/src/hooks/: useBackendHealth.test.ts  useBackendHealth.ts  useDictation.ts  useFileTranscription.ts  useSettings.ts  useTauriShortcuts.ts  useTranscription.ts  useWebSocket.test.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: injection.rs  lib.rs  main.rs  shortcuts.rs  tray.rs
(+23 files in other folders)
