[package]
name = "voice-to-speech-local"
version = "0.1.0"
description = "Local real-time voice transcription powered by Voxtral Mini 4B"
edition = "2021"

[lib]
name = "voice_to_speech_local_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
