[package]
name = "openwhisper"
version = "0.1.0"
description = "Local real-time voice transcription powered by Voxtral Mini 4B"
edition = "2021"

[lib]
name = "openwhisper_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.6"
arboard = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2"
